  (KeyboardInterrupt, and SystemExit) propagate instead of ignoring them

Extension Modules
-----------------

- Support os.O_ASYNC and fcntl.FASYNC if the constants exist on the platform.

- Support for Windows 9x has been removed from the winsound module.

- bsddb module updated to version 4.6.4.

- Fixed #2870: cmathmodule.c compile error

Library
-------

- The Tkinter module has been made a package and renamed 'tkinter'.  All
  Tkinter-related modules (like Tix, ScrolledText, turtle etc.) are now
  submodules of that package and have been renamed to conform to PEP 8
  standards.

- The repr module has been renamed 'reprlib'.  The old name is now
  deprecated.

- The statvfs module has been deprecated for removal in Python 3.0.

- The sunaudiodev and SUNAUDIODEV modules have been deprecated for removal in
  Python 3.0.

- The WAIT module from IRIX has been deprecated for removal in Python 3.0.

- The torgb module from IRIX has been deprecated for removal in Python 3.0.

- The SV module from IRIX has been deprecated for removal in Python 3.0.

- The readcd module from IRIX has been deprecated for removal in Python 3.0.

- The panelparser module from IRIX has been deprecated for removal in
  Python 3.0.

-The panel module from IRIX has been deprecated for removal in Python 3.0.

- The jpeg module from IRIX has been deprecated for removal in Python 3.0.

- The IOCTL module from IRIX has been deprecated for removal in Python 3.0.

- The IN module from IRIX has been deprecated for removal in Python 3.0.

- The imgfile module from IRIX has been deprecated for removal in Python 3.0.

- The GLWS module from IRIX has been deprecated for removal in Python 3.0.

- The GET module from IRIX has been deprecated for removal in Python 3.0.

- The fm module from IRIX has been deprecated for removal in Python 3.0.

- The FL, flp, and fl modules from IRIX have been deprecated for removal in
  Python 3.0.

- The FILE module on IRIX has been deprecated for removal in Python 3.0.
